--- a/Languages/English/Keyed/VEE_Incidents.xml
+++ b/Languages/English/Keyed/VEE_Incidents.xml
@@ -68,4 +68,5 @@ They seem accustomed to human contact and are joining the colony.</BAWI>
     <HP>A group of hunters from {0} are passing through the area. They will hunt here for a few hours and then move on.</HP>
 
     <VEE_Decay>Decaying due to drought.</VEE_Decay>
+    <VEE_DroughtGui>Adjusted fertility due to drought: {0}</VEE_DroughtGui>
 </LanguageData>
